--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
-
-<head>
+<html lang="pt-br">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Rua</title>
-</head>
-
-<body>
-
+    <title>Projeto Vitor</title>
+    <link rel="stylesheet" href="./../styles/index.css">
+    <script src="https://kit.fontawesome.com/398cd98506.js"
+      crossorigin="anonymous"></script>
+  </head>
+  <body>
     <header>
+      <div id="profissao">
+        <h4>aluno de Computação</h4>
+      </div>
+      <div id="botoes-header">
+        <button onclick="window.location.href='./index.html'"
+          id="btn-rosa" class="botao-header">
+          <h6>HOME</h6>
+          <i class="fa-solid fa-house"></i>
+        </button>
+        <button onclick="window.location.href='./projetos.html'"
+          id="btn-azul" class="botao-header">
+          <h6>PROJETOS</h6>
+          <i class="fa-solid fa-folder"></i>
+        </button>
+        <button onclick="window.location.href='./formacao.html'"
+          id="btn-amarelo" class="botao-header">
+          <h6>FORMAÇÃO</h6>
+          <i class="fa-solid fa-graduation-cap"></i>
+        </button>
+      </div>
+    </header>
 
+    <main>
+      <img id="img" src="./../assets/coringa.gif" alt="Coringa GIF">
+      <div id="infos">
+        <h1>VITOR</h1>
+        <h3>MATEUS</h3>
+        <p>Sou estudante de programaçao,gosto de criar design.</p>
+      </div>
+    </main>
+    <footer>
+      <button>
+        <i class="fa-brands fa-square-facebook"></i>
+      </button>
+      <button>
+        <i class="fa-brands fa-square-instagram"></i>
+      </button>
+    </footer>
+  </body>
 </html>
